# Black_box_modeling

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config.py
libs/data_loader/: __init__.py  data_loader.py
libs/nn/: baseline_model.py
libs/plots/: __init__.py  plot_helpers.py
libs/utils/: __init__.py  user_select.py
test/: apply_power_transform.py  compare_dataset.py  compare_submissions.py  create_submission.py  inspect_features.py  inspect_features_by_dataset.py  predict_and_score.py  split_databset.py  test_data_module.py  train_baseline_model.py
